refactor: removed hard coded strings

--- a/waiter-app/Comanda/app/src/main/res/values/strings.xml
+++ b/waiter-app/Comanda/app/src/main/res/values/strings.xml
@@ -1,3 +1,49 @@
 <resources>
     <string name="app_name">Comanda</string>
+    <string name="open_table">Open Table</string>
+    <string name="how_many_people_are_sitting_at_this_table">How many people are sitting at this table?</string>
+    <string name="number_of_people">Number of people</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
+    <string name="remove">Remove</string>
+    <string name="add">Add</string>
+    <string name="edit_menu_item">Edit Menu Item</string>
+    <string name="add_menu_item">Add Menu Item</string>
+    <string name="name">Name</string>
+    <string name="description">Description</string>
+    <string name="price">Price</string>
+    <string name="available">Available</string>
+    <string name="save">Save</string>
+    <string name="add_new_printer">Add New Printer</string>
+    <string name="printer_name">Printer Name</string>
+    <string name="printer">Printer</string>
+    <string name="name_is_required">Name is required</string>
+    <string name="ip_address">IP Address</string>
+    <string name="address_is_required">Address is required</string>
+    <string name="port">Port</string>
+    <string name="invalid_port_number">Invalid port number</string>
+    <string name="add_printer">Add Printer</string>
+    <string name="edit_printer">Edit Printer</string>
+    <string name="update_printer">Update Printer</string>
+    <string name="menu">Menu</string>
+    <string name="add_table">Add table</string>
+    <string name="occupied">Occupied</string>
+    <string name="all">All</string>
+    <string name="sign_in">Sign In</string>
+    <string name="employee_id">Employee ID</string>
+    <string name="password">Password</string>
+    <string name="configure_server">Configure server</string>
+    <string name="printers">Printers</string>
+    <string name="settings_to_be_implemented">Settings (to be implemented)</string>
+    <string name="logout">Logout</string>
+    <string name="table_number">Table %1$d</string>
+    <string name="take_order">Take Order</string>
+    <string name="modify_order">Modify Order</string>
+    <string name="port_number">Port: %1$d</string>
+    <string name="delete_printer">Delete printer</string>
+    <string name="login_title">Comanda</string>
+    <string name="login_subtitle">Waiter Portal</string>
+    <string name="login_welcome_back">Welcome Back</string>
+    <string name="login_server_configuration_title">Server Configuration</string>
+    <string name="login_base_url_label">Base URL</string>
 </resources>
