--- a/waiter-app/Comanda/app/src/main/res/values/strings.xml
+++ b/waiter-app/Comanda/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <string name="login_welcome_back">Welcome Back</string>
     <string name="login_server_configuration_title">Server Configuration</string>
     <string name="login_base_url_label">Base URL</string>
+    <string name="settings">Settings</string>
+    <string name="back">Back</string>
 </resources>
