--- a/waiter-app/Comanda/app/src/main/res/values/strings.xml
+++ b/waiter-app/Comanda/app/src/main/res/values/strings.xml
@@ -48,4 +48,35 @@
     <string name="login_base_url_label">Base URL</string>
     <string name="settings">Settings</string>
     <string name="back">Back</string>
+
+    <!-- Manage Users Screen -->
+    <string name="manage_users">Manage Users</string>
+    <string name="add_user">Add User</string>
+    <string name="edit_user">Edit User</string>
+    <string name="delete_user">Delete User</string>
+    <string name="no_users_found">No users found</string>
+    <string name="add_user_prompt">Tap the + button to add a new user</string>
+    <string name="add_new_user">Add New User</string>
+    <string name="waiter">Waiter</string>
+    <string name="admin">Admin</string>
+    <string name="create">Create</string>
+    <string name="new_password">New Password</string>
+    <string name="update">Update</string>
+    <string name="delete_user_confirmation">Are you sure you want to delete this user?</string>
+    <string name="delete">Delete</string>
+
+    <!-- Settings Screen -->
+    <string name="appearance">Appearance</string>
+    <string name="theme">Theme</string>
+    <string name="choose_your_preferred_theme">Choose your preferred theme</string>
+    <string name="language">Language</string>
+    <string name="select_your_language">Select your language</string>
+    <string name="notifications">Notifications</string>
+    <string name="enable_notifications">Enable notifications</string>
+    <string name="receive_alerts_and_updates">Receive alerts and updates</string>
+    <string name="account">Account</string>
+    <string name="manage_users_subtitle">Add, remove, or edit user accounts</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="edit_profile_subtitle">Change your name or password</string>
+    <string name="logout_subtitle">You will be returned to the login screen</string>
 </resources>
